--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -94,7 +94,12 @@
   position: absolute;
   top: 35%;
   left: 2%;
+  cursor: pointer;
+  /* border: 1px solid ; */
+ 
+
 }
+
 
 /* Middle */
 .intake .middle {
@@ -128,9 +133,38 @@
   justify-content: center;
   border-radius: 5px;
 }
+
+/* .intake .xdf {
+    background: var(--blue);
+    color: white;
+} */
 .intake .card:hover {
   border: 1px solid var(--pink);
 }
+
+ /* Experimental */
+
+.hist{
+    background: red;
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    z-index: 2;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 0; /* Ensure the backdrop is on top */
+  }
+
+  /* Experimental */
 .gradient-mask {
   width: 100%;
   height: 100%;
