--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-    /* overflow: hidden; */
+  /* overflow: hidden; */
 }
 
 a {
@@ -200,4 +200,53 @@ button {
   background: transparent;
   /* background: red; */
   /* padding-left: 1.5em; */
+}
+
+.check_in_card {
+  border: 1px solid var(--blue);
+  border-radius: 10px;
+  width: 95%;
+  padding: 1.7em;
+  margin: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+
+  position: absolute;
+  top: 0;
+}
+
+.check_in_card .patient_details {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  /* padding: .5em; */
+}
+
+.check_in_card .patient_details h2 {
+  color: var(--pink);
+  margin-bottom: .5em;
+}
+.check_in_card .patient_details .id_number {
+  font-weight: 600;
+  margin-bottom: .5em;
+}
+.check_in_card .patient_details .age {
+  font-weight: 600; 
+  margin-bottom: .5em;
+}
+
+.check_in_card .check_in_side {
+  /* background: red; */
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.check_in_card .check_in_button{
+  /* width: 1%; */
+  
 }
