--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -148,7 +148,7 @@
 
 .intake .middle .admitted-patients {
   border-radius: 3px;
-  padding: 1em;
+  padding: .8em;
   margin-right: 0.2em;
   width: 50%;
 
