--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -21,7 +21,27 @@
   text-align: center;
   padding: 1.6em;
   border-bottom: 2px solid var(--bg);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   
+}
+.newpatient .title-section .close_icon{
+  /* background: red; */
+  padding: .6em;
+  border: .2px solid var(--blue);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--pink);
+  font-weight: 700;
+  cursor: pointer;
+  transition: all .2s;
+}
+.newpatient .title-section .close_icon:hover{
+  scale: .9;
+  /* background: var(--bg); */
 }
 
 
