--- a/src/styles/direct-tests.css
+++ b/src/styles/direct-tests.css
@@ -1,36 +1,107 @@
-.direct-tests{
-    width: 600px;
-    border: 1.5px solid #dbf0f0;
-    /* border: 1.5px solid #F9C2D9; */
-    border-radius: 10px;
-    margin: 0.3em;
-    min-height: 320px;
-    max-height: 320px;
-    padding: 0.8em;
+.direct-tests {
+  width: 600px;
+  border: 1.5px solid #dbf0f0;
+  /* border: 1.5px solid #F9C2D9; */
+  border-radius: 10px;
+  margin: 0.3em;
+  min-height: 330px;
+  max-height: 330px;
+  padding: 0.8em;
 
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
 }
 
-.tests-card{
-    border: 2px solid var(--bg);
-    border-radius: 10px;
-    /* min-height: 80px;
+.tests-card {
+  border: 2px solid var(--bg);
+  border-radius: 10px;
+  /* min-height: 80px;
     max-height: 80px; */
-    /* background: red; */
-    width: 47%;
-    min-width: 150px;
-    display: flex;
-    align-items: center;
-    /* justify-content: space-evenly; */
-    padding: .2em .5em;
-    margin: .3em;
-
+  /* background: red; */
+  width: 47%;
+  min-width: 150px;
+  display: flex;
+  align-items: center;
+  /* justify-content: space-evenly; */
+  padding: 0.2em 0.5em;
+  margin: 0.3em;
+  cursor: pointer;
+  transition: all 0.2s;
 }
-.tests-card p{
-    color: var(--blue);
-    font-weight: 600;
-    margin-left: 1.1em;
+.tests-card:hover {
+  border: 2px solid #f9c2d9;
+}
+.tests-card p {
+  color: var(--blue);
+  font-weight: 600;
+  margin-left: 1.1em;
+}
+
+.direct-tests-modal {
+  /* width: 600px; */
+  width: 100%;
+  /* border: 1.5px solid #dbf0f0; */
+  border-radius: 10px;
+  /* margin: 0.3em; */
+  /* min-height: 160px;
+  max-height: 160px; */
+  height: 100%;
+  padding: 0.5em;
+
+  /* background: red; */
+  background: white;
+  background: var(--bg);
+  position: absolute;
+  top: 0;
+}
+
+.direct-tests-form {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  /* background: red; */
+  margin: 0.3em 0;
+  /* width: 90%; */
+  /* margin: 0 auto; */
+}
+.direct-tests-form .row {
+  display: flex;
+  align-items: center;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  /* background: #dbf0f0; */
+  width: 60%;
+  margin-bottom: .6em;
+}
+.direct-tests-form .row input {
+  border-radius: 3px;
+  outline: none;
+  border: 1.4px solid var(--blue);
+  padding: 0.5em;
+  width: 200px;
+  font-weight: 600;
+}
+
+.direct-tests-modal .top-case{
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: var(--bg);
+  background: linear-gradient(to right, var(--blue), var(--pink));
+  padding: .5em;
+  border-radius: 3px;
+  color: white;
+}
+
+.direct-tests-modal .navigations{
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  scale: .9;
+  /* padding: .5em; */
 }
