--- a/src/styles/patientdetail.css
+++ b/src/styles/patientdetail.css
@@ -14,7 +14,7 @@
 .pic-name {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   width: 90%;
   padding: .3em;
 }
@@ -36,6 +36,7 @@
 .pic-name p{
     font-weight: 600;
     font-size: 1.1em;
+    margin-left: .6em;
 }
 
 .patientdetails .contact-details{
