--- a/src/styles/direct-tests.css
+++ b/src/styles/direct-tests.css
@@ -102,8 +102,10 @@
 }
 
 .direct-tests-form td:hover{
-  background: var(--bg);
-  background: #FDE7F0;
+  /* background: var(--bg);
+  background: #94ABE4;
+  background: #e1e1e8; */
+  /* background: #FDE7F0; */
   color: white;
   cursor: pointer;
   /* border: .1px solid red; */
@@ -122,7 +124,7 @@
   height: 100%;
   /* border: 1px solid red; */
   border-radius: 4px;
-  /* background: #f5f5f5; */
+  background: #f5f5f5;
   /* border-bottom: 1.4px solid #F9C2D9; */
 
 }
@@ -132,11 +134,13 @@
 
   outline: none;
   border: 2px solid var(--pink);
+  /* border: 2px solid #F9C2D9; */
+  /* background: #f9c2d9; */
   font-weight: 500;
   padding: .2em;
   font-size: 1.1em;
   background: transparent;
-  width: 80%;
+  width: 100%;
   height: 100%;
   /* border: 1px solid red; */
   border-radius: 4px;
