--- a/src/styles/patientdetail.css
+++ b/src/styles/patientdetail.css
@@ -60,7 +60,7 @@
     /* background: red; */
     width: 100%;
     color: #a0a0a0;
-    margin-bottom: .5em;
+    margin-bottom: 1em;
 
 }
 .patientdetails .contact-details .details p{
