--- a/src/styles/patientdetail.css
+++ b/src/styles/patientdetail.css
@@ -46,6 +46,8 @@
     align-items: start;
     justify-content: center;
     padding: .3em;
+    /* TO DO */
+    /* color: ;  */  
     margin-top: 4%;
 }
 .patientdetails .contact-details .title{
