--- a/src/App.css
+++ b/src/App.css
@@ -228,15 +228,15 @@ button {
 
 .check_in_card .patient_details h2 {
   color: var(--pink);
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 .check_in_card .patient_details .id_number {
   font-weight: 600;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 .check_in_card .patient_details .age {
-  font-weight: 600; 
-  margin-bottom: .5em;
+  font-weight: 600;
+  margin-bottom: 0.5em;
 }
 
 .check_in_card .check_in_side {
@@ -246,8 +246,24 @@ button {
   align-items: center;
   justify-content: end;
 }
-.check_in_card .check_in_button{
+.check_in_card .check_in_button {
   /* width: 1%; */
-  
 }
 
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 3px solid var(--blue);
+  border-radius: 50%;
+  border-left-color: transparent;
+  animation: spinner linear infinite forwards 0.5s;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
