--- a/src/styles/lab-dashboard.css
+++ b/src/styles/lab-dashboard.css
@@ -59,6 +59,22 @@
   align-items: center;
   justify-content: center;
   border: 1.9px solid var(--bg);
+  position: relative;
+}
+.notif_num{
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background: red;
+  position: absolute;
+  top: 0;
+  right: -10px;
+  color: white;
+  font-weight: 600;
+  display: grid;
+  place-content: center;
+  font-size: .9em;
+  padding: .4em;
 }
 .labtech .dp-div {
   overflow: hidden;
@@ -207,6 +223,10 @@
   margin-bottom: 0.5em;
   cursor: pointer;
   font-weight: 600;
+  width: 95%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-top: .2em;
 }
 .lab-dashboard .nav-item:hover {
   /* background: #A4B8E8; */
@@ -223,7 +243,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  bottom: 4%;
+  bottom: 2%;
   left: 30%;
   cursor: pointer;
 }
